--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
+            <h1>Faraz Khan</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
+                <p class="event listening">FK_rokin</p>
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
